# PreventA

./: .env.example  .gitignore  .vercelignore  DESIGN.md  Dockerfile  PRODUCT.md  README.md  alembic.ini  compose.yaml  pyproject.toml  requirements.txt  vercel.json
.impeccable/live/: config.json
api/: index.py
docs/: ROADMAP.md  architecture.md  evaluation.md
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.node.json  vercel.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  HazopTable.test.tsx  api.ts  data.ts  groupRowsByCause.test.ts  hazopTableUtils.ts  main.tsx  styles.css
frontend/src/components/: login-page.tsx
frontend/src/test/: setup.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphify-out/memory/: query_20260612_203152_preventa_hazop_deviation_assist_hybrid_retrieval_c.md
graphify-out/wiki/: index.md
migrations/: env.py
migrations/versions/: 20260612_0001_initial.py  20260701_0002_openpha_hierarchy.py  20260701_0003_opha_ids.py  20260708_0004_opha_review_items.py
scripts/: __init__.py  evaluate_retrieval.py  ingest_safety_corpus.py  test_vercel_imports.py
src/preventa/: __init__.py  main.py
src/preventa/api/: auth_dependencies.py  dependencies.py  router.py
src/preventa/api/routes/: auth.py  rag.py  workspace.py
src/preventa/core/: __init__.py  config.py  database.py
src/preventa/db/: base.py
src/preventa/db/models/: __init__.py  hazop.py  rag.py  registers.py
src/preventa/features/auth/: repository.py  schemas.py  (+1 more)
tests/fixtures/: safety_corpus.json  synthetic.opha
tests/integration/: test_opha_postgres.py  test_rag_retrieval.py  test_rag_semantic_ollama.py  test_workspace_postgres.py
tests/unit/: test_auth.py  test_database_url.py  test_embedder_factory.py  test_evaluation.py  test_fusion.py  test_guardrails.py  test_hashing_embedder.py  test_opha_export.py  test_opha_export_edge.py  test_opha_import.py  test_opha_lopa_check.py  test_opha_lopa_check_edge.py  test_opha_registers.py  test_opha_risk.py  test_opha_risk_edge.py  test_opha_roundtrip.py  test_opha_three_state_risk.py  test_opha_to_orm.py  test_opha_versioning.py  test_security_hardening.py  test_store_backend.py  test_workspace.py  test_workspace_client_matrix.py  test_workspace_crud.py  test_workspace_lopa_verify.py  test_workspace_multi_category.py  test_workspace_registers.py
(+26 files in other folders)
