[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "preventa"
version = "0.1.0"
description = "On-prem process safety platform with grounded HAZOP and LOPA assistance"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "pgvector>=0.3,<1",
  "pydantic-settings>=2.7,<3",
  "python-docx>=1.1,<2",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  # Alembic's online migrations use a sync driver (env.py strips ``+asyncpg``),
  # so running ``alembic upgrade head`` needs psycopg2 even though the app runs
  # on asyncpg. Kept out of runtime deps — it is only needed to apply migrations.
  "psycopg2-binary>=2.9,<3",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/preventa"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
